# python-template

./: .copier-answers.sample.yml  .gitattributes  .gitignore  LICENSE.jinja  README.md  README.md.jinja  copier.yaml  pyproject.toml  pyproject.toml.jinja  settings.ini  settings.ini.jinja
.devcontainer/: Dockerfile  Dockerfile.jinja  devcontainer.json  devcontainer.json.jinja
.github/: check.yml  dependabot.yml  dependabot.yml.jinja
.github/workflows/: check.yml  check.yml.jinja  template-smoke.yml
docs/design/: copier_migration_plan.md  template_usage_guide.md
nbs/: index.ipynb  index.ipynb.jinja  nbdev.yml  nbdev.yml.jinja
src/jlp/python-template/: _modidx.py
src/jlp/python_template/: __init__.py  _modidx.py  hello.py
src/jlp/skillcorner/: _modidx.py
src/ra/python_template/: _modidx.py
src/{{ package_name }}/: __init__.py.jinja
src/{{ package_namespace }}/{{ package_name }}/: __init__.py  __init__.py.jinja  hello.py  hello.py.jinja
template_parts/: readme_common.md.jinja
tests/: test_dummy.py  test_dummy.py.jinja  test_import.py  test_import.py.jinja
